--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <section>
         <div class="title-blocks">Trends</div class="title-blocks">
         <div id="add-images" class="images-container">
-            <figure id="fig-container">
+            <figure>
                 <img src="images/2-hours-finding-error.jpg" alt="">
             </figure>
-            </div>
+        </div>
     </section>
     <script src="scripts/main.js"></script>
 </body>
