--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 <body>
     <nav class="navBar">
         <figure><img src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
-        <span class="btn lila space"><a href="">Create Guifos</a></span>
-        <span class="btn lila"><a href="">Choose tema</a></span>
-        <span class="btn lila dropdown space"><a href=""><img src="images/dropdown.svg" alt="A dropdown icon"></a></span>
-        <span class="btn deco-btn"><a href="">My Gifos</a></span>
+        <button class="btn lila space"><a href="">Create Guifos</a></button>
+        <button class="btn lila"><a href="">Choose tema</a></button>
+        <button class="btn lila dropdown space"><a href=""><img src="images/dropdown.svg" alt="A dropdown icon"></a></button>
+        <button class="btn deco-btn"><a href="">My Gifos</a></button>
     </nav>
     <section>
         <div class="search-sec">
             <div class="search-title">Search</div>
-            <input type="text" name="" id="search-bar">
-            <span class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon "> Search</span>
+            <input type="text" name="" id="search-Input" placeholder=" Search for something...">
+            <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>
         </div>
     </section>
     <section>
         <div class="title-blocks">Today's suggestion</div>
         <div class="images-container">
             <figure>
-                <figcaption class="search-title">
+                <figcaption class="search-title fig-title">
                     #FigureTitle
                     <img src="images/close.svg" alt="Close icon">
                 </figcaption>
@@ -36,13 +36,8 @@
             </figure>
         </div>
     </section>
-    <section>
+    <section id="container-Base">
         <div class="title-blocks">Trends</div class="title-blocks">
-        <div id="add-images" class="images-container">
-            <figure>
-                <img src="images/2-hours-finding-error.jpg" alt="">
-            </figure>
-        </div>
     </section>
     <script src="scripts/main.js"></script>
 </body>
