--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>
         </div>
     </section>
-    <section>
+    <section id="first-container-Base">
         <div class="title-blocks">Today's suggestion</div>
         <div class="images-container">
             <figure>
@@ -32,13 +32,14 @@
                     <img src="images/close.svg" alt="Close icon">
                 </figcaption>
                 <img src="images/2-hours-finding-error.jpg" alt="">
-                <span class="btn3">More...</span>
+                <button class="btn3">More...</button>
             </figure>
         </div>
     </section>
     <section id="container-Base">
-        <div class="title-blocks">Trends</div class="title-blocks">
+        <div id="trends-Title" class="title-blocks">Trends</div>
     </section>
+    <button class="btn lila go-up">Go up</button>
     <script src="scripts/main.js"></script>
 </body>
 </html>
