--- a/index.html
+++ b/index.html
@@ -9,37 +9,29 @@
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navBar">
-        <figure><img src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
-        <button class="btn lila space"><a href="">Create Guifos</a></button>
-        <button class="btn lila"><a href="">Choose tema</a></button>
-        <button class="btn lila dropdown space"><a href=""><img src="images/dropdown.svg" alt="A dropdown icon"></a></button>
-        <button class="btn deco-btn"><a href="">My Gifos</a></button>
-    </nav>
-    <section>
-        <div class="search-sec">
-            <div class="search-title">Search</div>
-            <input type="text" name="" id="search-Input" placeholder=" Search for something...">
-            <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>
-        </div>
-    </section>
-    <section id="first-container-Base">
-        <div class="title-blocks">Today's suggestion</div>
-        <div class="images-container">
-            <figure>
-                <figcaption class="search-title fig-title">
-                    #FigureTitle
-                    <img src="images/close.svg" alt="Close icon">
-                </figcaption>
-                <img src="images/2-hours-finding-error.jpg" alt="">
-                <button class="btn3">More...</button>
-            </figure>
-        </div>
-    </section>
-    <section id="container-Base">
-        <div id="trends-Title" class="title-blocks">Trends</div>
-    </section>
-    <button class="btn lila go-up">Go up</button>
-    <script src="scripts/main.js"></script>
+    <main>
+        <nav class="navBar">
+            <figure><img src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
+            <button class="btn lila space"><a href="">Create Guifos</a></button>
+            <button class="btn lila"><a href="">Choose tema</a></button>
+            <button class="btn lila dropdown space"><a href=""><img src="images/dropdown.svg" alt="A dropdown icon"></a></button>
+            <button class="btn deco-btn"><a href="">My Gifos</a></button>
+        </nav>
+        <section>
+            <div class="search-sec">
+                <div class="search-title">Search</div>
+                <input type="text" name="" id="search-Input" placeholder=" Search for something...">
+                <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>
+            </div>
+        </section>
+        <section id="suggestion-container">
+            <div class="title-blocks">Today's suggestion</div>
+        </section>
+        <section id="container-Base">
+            <div id="trends-Title" class="title-blocks">Trends</div>
+        </section>
+        <button class="btn lila go-up">Go up</button>
+        <script src="scripts/main.js"></script>
+    </main>
 </body>
 </html>
