--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
         <nav class="navBar">
             <figure><img src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
             <button class="btn lila space"><a href="">Create Guifos</a></button>
-            <button class="btn lila"><a href="">Choose tema</a></button>
-            <button class="btn lila dropdown space"><a href=""><img src="images/dropdown.svg" alt="A dropdown icon"></a></button>
+            <div class="dropdown-menu" >
+                <div class="dropdown-content-base">
+                    <button class="btn lila">Choose tema</button>
+                    <button class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>                    
+                </div>
+                <div class="dropdown-content">
+                    <button class="btn lila">Sailor Day</button>
+                    <button class="btn lila">Sailor Night</button>
+                </div>
+            </div>
             <button class="btn deco-btn"><a href="">My Gifos</a></button>
         </nav>
         <section>
