--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="search-title">Welcome to my GIFOS website! ----- You are visitor number: 3.126.979</header>
     <main>
         <nav class="navBar">
             <figure><img src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
-            <button class="btn lila space"><a href="">Create Guifos</a></button>
+            <button class="btn lila space"><a href="upload-page.html">Create Guifos</a></button>
             <div class="dropdown-menu" >
                 <div class="dropdown-content-base">
                     <button class="btn lila">Choose tema</button>
-                    <button class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>                    
+                    <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>                    
                 </div>
                 <div class="dropdown-content">
                     <button class="btn lila">Sailor Day</button>
                     <button class="btn lila">Sailor Night</button>
                 </div>
             </div>
-            <button class="btn deco-btn"><a href="">My Gifos</a></button>
+            <button class="btn deco-btn"><a href="upload-page.html">My Gifos</a></button>
         </nav>
         <section>
             <div class="search-sec">
