change search bar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <button class="btn lila">Choose tema</button>
                     <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>                    
                 </div>
-                <div class="dropdown-content">
+                <div id="dropdown-content-menu" class="dropdown-hidden">
                     <button class="btn lila">Sailor Day</button>
                     <button class="btn lila">Sailor Night</button>
                 </div>
