changes at search bar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="search-title">Search</div>
                 <input type="text" name="" id="search-Input" placeholder=" Search for something...">
                 <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>
+                <div id="words-searched"></div>
             </div>
         </section>
         <section id="suggestion-container">
