--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to GifOS Project</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/dark-styles.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="search-title">Welcome to my GIFOS website! ----- You are visitor number: 3.126.979</header>
-    <main>
+    <main id="main-body">
         <nav class="navBar">
-            <figure><img src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
+            <figure><img id="main-logo" src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
             <button class="btn lila space"><a href="upload-page.html">Create Guifos</a></button>
             <div class="dropdown-menu" >
                 <div class="dropdown-content-base">
                     <button class="btn lila">Choose tema</button>
-                    <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>                    
+                    <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>
                 </div>
                 <div id="dropdown-content-menu" class="dropdown-hidden">
-                    <button class="btn lila">Sailor Day</button>
-                    <button class="btn lila">Sailor Night</button>
+                    <button id="light-style" class="btn lila">Sailor Day</button>
+                    <button id="dark-style" class="btn lila">Sailor Night</button>
                 </div>
             </div>
             <button class="btn deco-btn"><a href="upload-page.html">My Gifos</a></button>
