changes at search functionalties

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <section id="container-Base">
             <div id="trends-Title" class="title-blocks">Trends</div>
         </section>
-        <button class="btn lila go-up">Go up</button>
-        <script src="scripts/main.js"></script>
+        <button class="btn lila go-up">Go up</button> 
     </main>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/upload.js"></script>
 </body>
 </html>
