--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <main id="main-body">
         <nav class="navBar">
             <figure><img id="main-logo" src="images/gifOF_logo.png" alt="My GifOS's logo"></figure>
-            <button class="btn lila space"><a href="upload-page.html">Create Guifos</a></button>
+            <button class="btn lila space"><a href="upload.html">Create Guifos</a></button>
             <div class="dropdown-menu" >
                 <div class="dropdown-content-base">
                     <button class="btn lila">Choose tema</button>
                     <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>
                 </div>
-                <div id="dropdown-content-menu" class="dropdown-hidden">
+                <div id="dropdown-content-menu" class="hidden-element">
                     <button id="light-style" class="btn lila">Sailor Day</button>
                     <button id="dark-style" class="btn lila">Sailor Night</button>
                 </div>
