--- a/upload.html
+++ b/upload.html
@@ -13,7 +13,7 @@
     <header class="search-title">Welcome to my GIFOS website! ----- You are visitor number: 3.126.979</header>
     <main>
         <nav class="navBar">
-            <figure><a href="/index.html"><img class="space" src="/images/arrow.svg" alt="Left arrow icon"><img id="main-logo" src="images/gifOF_logo.png" alt="My GifOS's logo"></a></figure>
+            <figure><a href="index.html"><img class="space" src="images/arrow.svg" alt="Left arrow icon"><img id="main-logo" src="images/gifOF_logo.png" alt="My GifOS's logo"></a></figure>
             <button class="btn lila space"><a href="upload.html"></a>Create Guifos</a></button>
             <div class="dropdown-menu" >
                 <div class="dropdown-content-base">
@@ -30,7 +30,7 @@
         </nav>
         <section id="video-explaining-step" class="search-sec">
             <div class="search-title">Create your gifo!</div>
-            <div><img src="/images/window img.png" alt="Window icon"> Here Aquí podrás crear tus propios guifos</div>
+            <div><img src="images/window img.png" alt="Window icon"> Here Aquí podrás crear tus propios guifos</div>
             <p>Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:
 1) Dar permisos de acceso a la cámara (sólo por el tiempo de uso)
 2) Capturar tu momento guifo
@@ -42,30 +42,30 @@
             <button id="start-button" class="btn2 lila">Start</button>
         </section>
         <section id="streaming-camera-step" class="search-sec">
-            <div class="search-title">Checking your camera device<img src="/images/close.svg" alt="close icon"></div>
+            <div class="search-title">Checking your camera device<img src="images/close.svg" alt="close icon"></div>
             <video id="video-tag"></video>
-            <button id="camera-img" class="lila dropdown"><img src="/images/camera.svg" alt=""></button>
+            <button id="camera-img" class="lila dropdown"><img src="images/camera.svg" alt=""></button>
             <button id="start-button" class="btn2 lila">Capture</button>
         </section>
         <section id="recording-video-step" class="search-sec">
-            <div class="search-title">Recording your gifo<img src="/images/close.svg" alt="close icon"></div>
+            <div class="search-title">Recording your gifo<img src="images/close.svg" alt="close icon"></div>
             <div class="buttons-panel">
-                <button id="camera-img" class="lila dropdown"><img src="/images/camera.svg" alt=""></button>
+                <button id="camera-img" class="lila dropdown"><img src="images/camera.svg" alt=""></button>
                 <button id="start-button" class="btn2 lila">Stop recording</button>
             </div>
 
         </section>
         <section id="previewing-video-step" class="search-sec">
-            <div class="search-title">Preview your gifo<img src="/images/close.svg" alt="close icon"></div>
-            <button id="camera-img" class="lila dropdown"><img src="/images/camera.svg" alt=""></button>
+            <div class="search-title">Preview your gifo<img src="images/close.svg" alt="close icon"></div>
+            <button id="camera-img" class="lila dropdown"><img src="images/camera.svg" alt=""></button>
             <button id="start-button" class="btn2 lila">Capture</button>
         </section>
         <section id="uploading-video-step" class="search-sec">
-            <div class="search-title">Uploading your gifo<img src="/images/close.svg" alt="close icon"></div>
+            <div class="search-title">Uploading your gifo<img src="images/close.svg" alt="close icon"></div>
             <button id="start-button" class="btn2 lila">Cancel</button>
         </section>
         <section id="sucessing-upload-step" class="search-sec">
-            <div class="search-title">Gifo uploaded sucessfully<img src="/images/close.svg" alt="close icon"></div>
+            <div class="search-title">Gifo uploaded sucessfully<img src="images/close.svg" alt="close icon"></div>
             <button id="start-button" class="btn2 lila">Ready</button>
         </section>
         <section id="uploaded-gifs">
