--- a/upload.html
+++ b/upload.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/dark-styles.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.6/RecordRTC.js"></script>
+    <script src="https://www.webrtc-experiment.com/gif-recorder.js"></script>
 </head>
 <body>
     <header class="search-title">Welcome to my GIFOS website! ----- You are visitor number: 3.126.979</header>
@@ -29,8 +30,8 @@
             <button class="btn deco-btn"><a href="upload.html">My Gifos</a></button>
         </nav>
         <section id="video-explaining-step" class="search-sec">
-            <div class="search-title">Create your gifo!</div>
-            <div><img src="images/window img.png" alt="Window icon"> Here Aquí podrás crear tus propios guifos</div>
+            <div class="search-title">0.- Create your gifo!</div>
+            <div><img src="images/window-img.png" alt="Window icon"> Here Aquí podrás crear tus propios guifos</div>
             <p>Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:
 1) Dar permisos de acceso a la cámara (sólo por el tiempo de uso)
 2) Capturar tu momento guifo
@@ -42,30 +43,29 @@
             <button id="start-button" class="btn2 lila">Start</button>
         </section>
         <section id="streaming-camera-step" class="search-sec">
-            <div class="search-title">Checking your camera device<img src="images/close.svg" alt="close icon"></div>
-            <video id="video-tag"></video>
-            <button id="camera-img" class="lila dropdown"><img src="images/camera.svg" alt=""></button>
-            <button id="start-button" class="btn2 lila">Capture</button>
+            <div class="search-title">1.- Checking your camera device<img src="/images/close.svg" alt="close icon"></div>
+            <video id="step1-streaming-video" class="gif-recorder-stylish"></video>
+            <button class="lila dropdown"><img src="images/camera.svg" alt=""></button>
+            <button id="start-capture-button" class="btn2 lila">Capture</button>
         </section>
         <section id="recording-video-step" class="search-sec">
-            <div class="search-title">Recording your gifo<img src="images/close.svg" alt="close icon"></div>
-            <div class="buttons-panel">
-                <button id="camera-img" class="lila dropdown"><img src="images/camera.svg" alt=""></button>
-                <button id="start-button" class="btn2 lila">Stop recording</button>
-            </div>
-
+            <div class="search-title">2.- Recording your gifo<img src="images/close.svg" alt="close icon"></div>
+            <img id="step2-recording-video" class="gif-recorder-stylish"></img>
+            <button class="lila dropdown"><img src="images/recording.svg" alt=""></button>
+            <button id="stop-recording-button" class="btn2 lila">Stop recording</button>
         </section>
         <section id="previewing-video-step" class="search-sec">
-            <div class="search-title">Preview your gifo<img src="images/close.svg" alt="close icon"></div>
-            <button id="camera-img" class="lila dropdown"><img src="images/camera.svg" alt=""></button>
-            <button id="start-button" class="btn2 lila">Capture</button>
+            <div class="search-title">3.- Preview your gifo<img src="images/close.svg" alt="close icon"></div>
+            <img id="step3-preview-video" class="gif-recorder-stylish"></img>
+            <button id="repeat-recording-button" class="btn2 lila space">Repeat</button>
+            <button id="start-button" class="btn2 lila">Upload gifo</button>
         </section>
         <section id="uploading-video-step" class="search-sec">
-            <div class="search-title">Uploading your gifo<img src="images/close.svg" alt="close icon"></div>
+            <div class="search-title">4.- Uploading your gifo<img src="images/close.svg" alt="close icon"></div>
             <button id="start-button" class="btn2 lila">Cancel</button>
         </section>
         <section id="sucessing-upload-step" class="search-sec">
-            <div class="search-title">Gifo uploaded sucessfully<img src="images/close.svg" alt="close icon"></div>
+            <div class="search-title">5.- Gifo uploaded sucessfully<img src="images/close.svg" alt="close icon"></div>
             <button id="start-button" class="btn2 lila">Ready</button>
         </section>
         <section id="uploaded-gifs">
@@ -73,5 +73,6 @@
         </section>
     </main>
     <script src="scripts/upload.js"></script>
+    <script src="https://www.webrtc-experiment.com/common.js"></script>
 </body>
 </html>
