--- a/upload.html
+++ b/upload.html
@@ -58,7 +58,7 @@
             <div class="search-title">3.- Preview your gifo<img src="images/close.svg" alt="close icon"></div>
             <img id="step3-preview-video" class="gif-recorder-stylish"></img>
             <button id="repeat-recording-button" class="btn2 lila space">Repeat</button>
-            <button id="start-button" class="btn2 lila">Upload gifo</button>
+            <button id="upload-gif-button" class="btn2 lila">Upload gifo</button>
         </section>
         <section id="uploading-video-step" class="search-sec">
             <div class="search-title">4.- Uploading your gifo<img src="images/close.svg" alt="close icon"></div>
