search bar finished

--- a/index.html
+++ b/index.html
@@ -21,17 +21,24 @@
                     <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>
                 </div>
                 <div id="dropdown-content-menu" class="hidden-element">
-                    <button id="light-style" class="btn lila">Sailor Day</button>
-                    <button id="dark-style" class="btn lila">Sailor Night</button>
+                    <button id="light-style" class="btn deco-btn">Sailor Day</button>
+                    <button id="dark-style" class="btn deco-btn">Sailor Night</button>
                 </div>
             </div>
             <button class="btn deco-btn"><a href="upload-page.html">My Gifos</a></button>
         </nav>
         <section>
-            <div class="search-sec">
+            <div id="search-bar-principal-div" class="search-sec deco-div-search">
                 <div class="search-title">Search</div>
-                <input type="text" name="" id="search-Input" placeholder=" Search for something...">
-                <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>
+                <div class="search-input-div deco-div-search">
+                    <input type="text" name="" id="search-Input" placeholder=" Search for something...">
+                    <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>                    
+                </div>
+                <div id="menu-search-help" class="hidden-element">
+                    <div id="search-example-1" class="btn">learn to code</div>
+                    <div id="search-example-2" class="btn">read</div>
+                    <div id="search-example-3" class="btn">geek</div>
+                </div>
                 <div id="words-searched"></div>
             </div>
         </section>
