--- a/upload.html
+++ b/upload.html
@@ -16,17 +16,6 @@
         <nav class="navBar">
             <figure><a href="index.html"><img class="space" src="images/arrow.svg" alt="Left arrow icon"><img id="main-logo" src="images/gifOF_logo.png" alt="My GifOS's logo"></a></figure>
             <button class="btn lila space"><a href="upload.html"></a>Create Guifos</a></button>
-            <div class="dropdown-menu" >
-                <div class="dropdown-content-base">
-                    <button class="btn lila">Choose tema</button>
-                    <button id="dropdown-button" class="btn lila dropdown space"><img src="images/dropdown.svg" alt="A dropdown icon"></button>
-                </div>
-                <div id="dropdown-content-menu" class="hidden-element">
-                    <button i
-                    d="light-style" class="btn lila">Sailor Day</button>
-                    <button id="dark-style" class="btn lila">Sailor Night</button>
-                </div>
-            </div>
             <button class="btn deco-btn"><a href="upload.html">My Gifos</a></button>
         </nav>
         <section id="video-explaining-step" class="search-sec">
@@ -70,6 +59,7 @@
         </section>
         <section id="uploaded-gifs">
             <div class="title-blocks">My uploaded Gifos</div>
+            <div class="images-container"></div>
         </section>
     </main>
     <script src="scripts/upload.js"></script>
