--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <button id="dark-style" class="btn deco-btn">Sailor Night</button>
                 </div>
             </div>
-            <button class="btn deco-btn"><a href="upload-page.html">My Gifos</a></button>
+            <button class="btn deco-btn"><a href="upload.html">My Gifos</a></button>
         </nav>
         <section>
             <div id="search-bar-principal-div" class="search-sec deco-div-search">
@@ -51,6 +51,5 @@
         <button class="btn lila go-up">Go up</button> 
     </main>
     <script src="scripts/main.js"></script>
-    <script src="scripts/upload.js"></script>
 </body>
 </html>
