css n js details

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <button id="dark-style" class="btn deco-btn">Sailor Night</button>
                 </div>
             </div>
-            <button class="btn deco-btn"><a href="upload.html#uploaded-gifs">My Gifos</a></button>
+            <button id="my-gifos-nav-btn" class="btn deco-btn"><a href="upload.html#uploaded-gifs">My Gifos</a></button>
         </nav>
         <section>
             <div id="search-bar-principal-div" class="search-sec deco-div-search">
                 <div class="search-title">Search</div>
                 <div class="search-input-div deco-div-search">
                     <input type="text" name="" id="search-Input" placeholder=" Search for something...">
-                    <button id="search-Button" class="btn2"><img src="images/lupa_inactive.svg" alt="A lens icon">Search</button>                    
+                    <button id="search-Button" class="btn2"><img id="lupa-image" src="images/lupa_inactive.svg" alt="A lens icon">Search</button>                    
                 </div>
                 <div id="menu-search-help" class="hidden-element">
                     <div id="search-example-1" class="btn">learn to code</div>
